--- a/expenseWebsite/expenseWebsite/templates/expenses/index.html
+++ b/expenseWebsite/expenseWebsite/templates/expenses/index.html
@@ -1,1 +1,13 @@
 {% extends 'base.html' %}
+
+<h1>Expenses List</h1>
+
+<ul class="list-group">
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+    <li class='List-group-item'>Bought Beer</li>
+</ul>
