--- a/expenseWebsite/expenseWebsite/templates/partials/sidebar.html
+++ b/expenseWebsite/expenseWebsite/templates/partials/sidebar.html
@@ -14,7 +14,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'income' %}">
+        <a class="nav-link" href="">
           Income
         </a>
       </li>
@@ -34,7 +34,7 @@
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'stats'%}">
+        <a class="nav-link" href="">
           Expenses Summary
         </a>
       </li>
@@ -60,7 +60,7 @@
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'preferences' %}">
+        <a class="nav-link" href="">
           General
         </a>
       </li>
