--- a/expenseWebsite/expenseWebsite/templates/base.html
+++ b/expenseWebsite/expenseWebsite/templates/base.html
@@ -6,18 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Geek-O-Engineers Money {% block title %} {% endblock %}</title>
+    <title>TrulyExpenses {% block title %} {% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" />
     <link href="{% static 'css/main.css'%}" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="{%static 'css/dashboard.css'%}" rel="stylesheet" />
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Geek-O-Engineers Money</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">TrulyExpenses</a>
 
       <ul
         class="navbar-nav px-3"
@@ -68,6 +68,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-     <script src="{%static 'js/main.js'%}"></script>
+     <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
