--- a/expenseWebsite/expenseWebsite/templates/base.html
+++ b/expenseWebsite/expenseWebsite/templates/base.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>TrulyExpenses {% block title %} {% endblock %}</title>
+    <title>Geek-o-Engineers Money {% block title %} {% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" />
     <link href="{% static 'css/main.css'%}" rel="stylesheet" />
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">TrulyExpenses</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Geek-o-Engineers Money</a>
 
       <ul
         class="navbar-nav px-3"
@@ -44,7 +44,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        {% include 'partials/_sidebar.html' %}
+        {% include 'partials/sidebar.html' %}
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           {% block content %} {% endblock %}
