--- a/expenseWebsite/expenseWebsite/templates/base.html
+++ b/expenseWebsite/expenseWebsite/templates/base.html
@@ -30,7 +30,7 @@
         </li>
 
         <li class="nav-item text-nowrap mt-3 ml-2">
-          <form action="{% url  'logout' %}" method="POST">
+          <form action="" method="POST">
             {% csrf_token %}
             <input
               class="text text-capitalize"
