--- a/expenseWebsite/expenseWebsite/templates/expenses/index.html
+++ b/expenseWebsite/expenseWebsite/templates/expenses/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html'%}
 
+
+{% block content %}
 <h1>Expenses List</h1>
 
 <ul class="list-group">
@@ -11,3 +13,4 @@
     <li class='List-group-item'>Bought Beer</li>
     <li class='List-group-item'>Bought Beer</li>
 </ul>
+{% endblock content %}
